--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
     <footer>
         © 2025 Criado por 
-        <a href="https://github.com/furiousofnightgames" target="_blank" rel="noopener noreferrer">FuriousOfNight</a> 
+        <a href="#" target="_blank" rel="noopener noreferrer">FuriousOfNight</a> 
         para 
         <a href="https://furiousofnightgames.github.io/codebook-furiousofnight/" target="_blank" rel="noopener noreferrer">Codebook FuriousOfNight</a> — Todos os direitos reservados.
     </footer>
